solved issue causing it not to work in VR

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 			}
 			else
 			{
-				sphere.position.x = Math.sin(time) = 0;
-				sphere.position.z = Math.cos(time) = 0;
-				sphere.position.y = Math.cos(time) = 0;
+				sphere.position.x = 0;
+				sphere.position.z = 0;
+				sphere.position.y = 0;
 			}
 
 			renderer.render(scene, camera);
